# ModifiedAdaptiveTagentialCover

./: CMakeLists.txt  INSTALL.txt  README.md
Samples/: Depth_P1_G3.sdp  bee.sdp  bird5.sdp  fly.sdp
src/: ATCSimplifiedDominantPoint.cpp  MATCSimplifiedDominantPoint.cpp  maximalblurredsegment.cpp  maximalblurredsegment.h  myfunctions.cpp  myfunctions.h  testfunctions.cpp  testfunctions.h
